[package]
name = "replicatedu_lib"
version = "0.1.0"
authors = ["alex <hortinstein@gmail.com>"]
edition = "2018"

[dependencies]
test_runner = { git = "https://github.com/replicatedu/test_runner.git" }
skeleton_parser = { git = "https://github.com/replicatedu/skeleton_parser.git" }
class_crypto = { git = "https://github.com/replicatedu/class_crypto.git" }
git_wrapper = { git = "https://github.com/replicatedu/git_wrapper.git" }
walkdir = "2.2.7"
fs_extra = "1.1.0"
term-painter = "*"
hex = "*"